--- a/TodoList/todoList2/todoList2/Base.lproj/Main.storyboard
+++ b/TodoList/todoList2/todoList2/Base.lproj/Main.storyboard
@@ -38,7 +38,13 @@
                             <outlet property="delegate" destination="ta0-oF-euu" id="Say-mv-05P"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="7hF-Xi-KKp"/>
+                    <navigationItem key="navigationItem" id="7hF-Xi-KKp">
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="tLj-Uk-rAT">
+                            <connections>
+                                <action selector="addItemButtonPressed:" destination="ta0-oF-euu" id="Euj-n4-VVa"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <segue destination="Av6-zZ-hqf" kind="show" identifier="itemTransition" id="GVd-4U-ohF"/>
                     </connections>
