--- a/TodoList/todoList2/todoList2/Base.lproj/Main.storyboard
+++ b/TodoList/todoList2/todoList2/Base.lproj/Main.storyboard
@@ -145,8 +145,14 @@
                                     <segue destination="ABp-V2-6WS" kind="unwind" unwindAction="unwindToOne:" id="wNf-ra-m8c"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Temp Text Field" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iCc-8x-Gmn">
+                                <rect key="frame" x="16" y="102" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temporary Text" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dd2-t7-QT9">
-                                <rect key="frame" x="16" y="102" width="343" height="20.5"/>
+                                <rect key="frame" x="16" y="140" width="343" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -154,16 +160,20 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="dd2-t7-QT9" firstAttribute="top" secondItem="iCc-8x-Gmn" secondAttribute="bottom" constant="8" id="9Mj-gN-TN2"/>
+                            <constraint firstItem="iCc-8x-Gmn" firstAttribute="top" secondItem="yqH-ph-qSA" secondAttribute="bottom" constant="8" id="CoB-C7-4Uq"/>
                             <constraint firstItem="hnr-Zd-Pkz" firstAttribute="trailing" secondItem="yqH-ph-qSA" secondAttribute="trailing" constant="16" id="D6B-zp-Lon"/>
                             <constraint firstItem="yqH-ph-qSA" firstAttribute="top" secondItem="hnr-Zd-Pkz" secondAttribute="top" id="GAX-cl-nPH"/>
                             <constraint firstItem="dd2-t7-QT9" firstAttribute="leading" secondItem="hnr-Zd-Pkz" secondAttribute="leading" constant="16" id="OoE-YQ-dYZ"/>
                             <constraint firstItem="hnr-Zd-Pkz" firstAttribute="trailing" secondItem="dd2-t7-QT9" secondAttribute="trailing" constant="16" id="bSu-BO-xTc"/>
-                            <constraint firstItem="dd2-t7-QT9" firstAttribute="top" secondItem="yqH-ph-qSA" secondAttribute="bottom" constant="8" id="bzA-eY-xhS"/>
+                            <constraint firstItem="iCc-8x-Gmn" firstAttribute="leading" secondItem="hnr-Zd-Pkz" secondAttribute="leading" constant="16" id="ovD-Ob-aVG"/>
+                            <constraint firstItem="hnr-Zd-Pkz" firstAttribute="trailing" secondItem="iCc-8x-Gmn" secondAttribute="trailing" constant="16" id="xos-Gi-geh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hnr-Zd-Pkz"/>
                     </view>
                     <connections>
                         <outlet property="ItemDescription" destination="dd2-t7-QT9" id="MQB-zw-kob"/>
+                        <outlet property="textField" destination="iCc-8x-Gmn" id="K9i-E7-38H"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L1V-ni-LBD" userLabel="First Responder" sceneMemberID="firstResponder"/>
