--- a/TodoList/todoList2/todoList2/Base.lproj/Main.storyboard
+++ b/TodoList/todoList2/todoList2/Base.lproj/Main.storyboard
@@ -152,7 +152,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temporary Text" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dd2-t7-QT9">
-                                <rect key="frame" x="16" y="140" width="343" height="20.5"/>
+                                <rect key="frame" x="16" y="69" width="119" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -160,12 +160,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="dd2-t7-QT9" firstAttribute="top" secondItem="iCc-8x-Gmn" secondAttribute="bottom" constant="8" id="9Mj-gN-TN2"/>
+                            <constraint firstItem="dd2-t7-QT9" firstAttribute="leading" secondItem="hnr-Zd-Pkz" secondAttribute="leading" constant="16" id="6Kd-kT-UHQ"/>
                             <constraint firstItem="iCc-8x-Gmn" firstAttribute="top" secondItem="yqH-ph-qSA" secondAttribute="bottom" constant="8" id="CoB-C7-4Uq"/>
                             <constraint firstItem="hnr-Zd-Pkz" firstAttribute="trailing" secondItem="yqH-ph-qSA" secondAttribute="trailing" constant="16" id="D6B-zp-Lon"/>
+                            <constraint firstItem="dd2-t7-QT9" firstAttribute="top" secondItem="hnr-Zd-Pkz" secondAttribute="top" constant="5" id="FrL-wJ-q4q"/>
                             <constraint firstItem="yqH-ph-qSA" firstAttribute="top" secondItem="hnr-Zd-Pkz" secondAttribute="top" id="GAX-cl-nPH"/>
                             <constraint firstItem="dd2-t7-QT9" firstAttribute="leading" secondItem="hnr-Zd-Pkz" secondAttribute="leading" constant="16" id="OoE-YQ-dYZ"/>
-                            <constraint firstItem="hnr-Zd-Pkz" firstAttribute="trailing" secondItem="dd2-t7-QT9" secondAttribute="trailing" constant="16" id="bSu-BO-xTc"/>
                             <constraint firstItem="iCc-8x-Gmn" firstAttribute="leading" secondItem="hnr-Zd-Pkz" secondAttribute="leading" constant="16" id="ovD-Ob-aVG"/>
                             <constraint firstItem="hnr-Zd-Pkz" firstAttribute="trailing" secondItem="iCc-8x-Gmn" secondAttribute="trailing" constant="16" id="xos-Gi-geh"/>
                         </constraints>
