Navigation Labels added

--- a/TodoList/todoList2/todoList2/Base.lproj/Main.storyboard
+++ b/TodoList/todoList2/todoList2/Base.lproj/Main.storyboard
@@ -181,11 +181,11 @@
             </objects>
             <point key="canvasLocation" x="4471.1999999999998" y="116.49175412293854"/>
         </scene>
-        <!--Item-->
+        <!--TODO-->
         <scene sceneID="XEw-Rx-w3l">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kkU-tY-Y2S" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="G9B-Og-oRd"/>
+                    <tabBarItem key="tabBarItem" title="TODO" id="G9B-Og-oRd"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e08-kX-Rkn">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -200,11 +200,11 @@
             </objects>
             <point key="canvasLocation" x="2647.1999999999998" y="117.39130434782609"/>
         </scene>
-        <!--Item-->
+        <!--DONE-->
         <scene sceneID="KwB-nb-095">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Vff-bR-9Ll" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="d0V-7p-hrJ"/>
+                    <tabBarItem key="tabBarItem" title="DONE" id="d0V-7p-hrJ"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cNr-Je-hGC">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
